--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+<head>
+	<meta charset="utf-8">
+	<title>San Joaquin Valley Town Hall</title>
+	<link rel="shortcut icon" href="images/favicon.ico">
+</head>
+
+<body>
+	<header>
+		<img src = "C:/Users/nims0/Downloads/A07/A07/images/town_hall_logo.gif" alt = "Town Hall Image" height = "80"/>
+		<h2>San Joaquin Valley Town Hall</h2>
+		<h3>Celebrating our 75<sup>th</sup> Year</h3>
+
+		<h2>
+			Our Mission
+		</h2>
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
+
+		<blockquote>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless."</blockquote>
+
+
+		<h2>Our Ticket Packages</h2>
+<ul>
+	<li>Season Package: $95</li>
+		<li>Patron Package: $200</li>
+		<li>Single Speaker: $25</li>
+
+
+		<h1>This season's guest speakers</h1>
+
+		<h3>October
+		<br><a href="C:/Users/nims0/Downloads/A07/A07/speakers/brancaccio.html">David Brancaccio</a>
+		</h3>
+	<img src = "C:/Users/nims0/Downloads/A07/A07/images/brancaccio75.jpg" alt = "David Brancaccio" height = "75"/>
+
+		<h3>November
+		<br><a href="C:/Users/nims0/Downlaods/A07/A07/speakers/sorkin.html">Andrew Ross Sorkin</a>
+		</h3>
+	<img src = "C:/Users/nims0/Downloads/A07/A07/images/sorkin75.jpg" alt = "Andrew Sorkin" height = "75"/>
+
+		<h3>January
+		<br><a href="C:/Users/nims0/Downloads/A07/A07/speakers/chua.html">Amy Chua</a>
+		</h3>
+	<img src = "C:/Users/nims0/Downloads/A07/A07/images/chua75.jpg" alt = "Amy Chua" height = "75"/>
+	</header>
+	<main>
+		
+	</main>
+	<footer>
+		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755	</p>
+	</footer>
 </body>
 </html>
