Partial upload of html hw

--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
         <li>Season Package: $95</li>
         <li>Patron Package: $200</li>
         <li>Single Speaker: $25</li>
+    </ul>
 
 
         <h1>This season's guest speakers</h1>
 
         <h3>October
-            <br><a href="C:/Users/nims0/Downloads/A07/A07/speakers/brancaccio.html">David Brancaccio</a>
+            <br><a href="speakers/brancaccio.html">David Brancaccio</a>
         </h3>
-        <img src = "C:/Users/nims0/Downloads/A07/A07/images/brancaccio75.jpg" alt = "David Brancaccio" height = "75"/>
+        <img src = "images/brancaccio75.jpg" alt = "David Brancaccio" height = "75"/>
 
         <h3>November
-            <br><a href="C:/Users/nims0/Downlaods/A07/A07/speakers/sorkin.html">Andrew Ross Sorkin</a>
+            <br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
         </h3>
-        <img src = "C:/Users/nims0/Downloads/A07/A07/images/sorkin75.jpg" alt = "Andrew Sorkin" height = "75"/>
+        <img src = "images/sorkin75.jpg" alt = "Andrew Sorkin" height = "75"/>
 
         <h3>January
-            <br><a href="C:/Users/nims0/Downloads/A07/A07/speakers/chua.html">Amy Chua</a>
+            <br><a href="speakers/chua.html">Amy Chua</a>
         </h3>
-        <img src = "C:/Users/nims0/Downloads/A07/A07/images/chua75.jpg" alt = "Amy Chua" height = "75"/>
+        <img src = "images/chua75.jpg" alt = "Amy Chua" height = "75"/>
 </header>
 <main>
 
